# tap-linkedin-ads

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  meltano.yml - Shortcut.lnk  pyproject.toml  streams.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  ci_workflow.yml  constraints.txt  release.yaml  test.yml
.secrets/: .gitignore  config.json
archive/tap_linkedin_ads/: streams.py
tap_linkedin/: auth.py  client.py  streams.py  tap.py
tap_linkedin/schemas/: account_users.json  accounts.json  ad_analytics_by_campaign.json  ad_analytics_by_creative.json  campaign_groups.json  campaigns.json
tap_linkedin/tests/: test_core.py
tap_linkedin_ads/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tap_linkedin_ads/streams/: base_stream.py  streams.py
tap_linkedin_ads/streams/ad_analytics/: __init__.py  ad_analytics_base.py  ad_analytics_by_campaign.py  ad_analytics_by_creative.py
tests/: .env.template  __init__.py  test_core.py
